some text and css changes

--- a/css/index.css
+++ b/css/index.css
@@ -330,7 +330,7 @@
 }
 
 #facebook {
-    background:url('http://tarun29061990.com/images/SocialIcons.png') no-repeat;
+    background:url('http://curioustechie.in/images/SocialIcons.png') no-repeat;
     display: inline-block;
     position: relative;
     text-indent: -9999px;
@@ -347,7 +347,7 @@
     right:0;
     width: 36px;
 	height: 36px;  
-    background:url('http://tarun29061990.com/images/SocialIcons.png') no-repeat;
+    background:url('http://curioustechie.in/images/SocialIcons.png') no-repeat;
     background-position: -180px -36px;
 	opacity: 0;
 	-webkit-transition: opacity 0.5s;
@@ -360,7 +360,7 @@
 }
 
 #twitter {
-    background:url('http://tarun29061990.com/images/SocialIcons.png') no-repeat;
+    background:url('http://curioustechie.in/images/SocialIcons.png') no-repeat;
     display: inline-block;
     position: relative;
     text-indent: -9999px;
@@ -377,7 +377,7 @@
     right:0; 
     width: 36px;
 	#fb-activeheight: 36px; 
-    background:url('http://tarun29061990.com/images/SocialIcons.png') no-repeat;
+    background:url('http://curioustechie.in/images/SocialIcons.png') no-repeat;
     background-position: -72px 0px;
 	opacity: 0;
 	-webkit-transition: opacity 0.5s;
@@ -390,7 +390,7 @@
 }
 
 #linkedin {
-    background:url('http://tarun29061990.com/images/SocialIcons.png') no-repeat;
+    background:url('http://curioustechie.in/images/SocialIcons.png') no-repeat;
     display: inline-block;
     position: relative;
     text-indent: -9999px;
@@ -407,7 +407,7 @@
     right:0;  
     width: 36px;
 	height: 36px;
-    background:url('http://tarun29061990.com/images/SocialIcons.png') no-repeat;
+    background:url('http://curioustechie.in/images/SocialIcons.png') no-repeat;
     background-position: -36px 0px;
 	opacity: 0;
 	-webkit-transition: opacity 0.5s;
